// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Transform pending transaction 1`] = `
{
  "account_id": "AG7EkLW7DRSVaN8Z75jMT1DJN51QpWc9LKB7w",
  "account_owner": null,
  "amount": -5.4,
  "authorized_date": 2024-02-23T00:00:00.000Z,
  "balance": "5.40",
  "bank_account_id": "123",
  "category": "travel",
  "category_id": "22016000",
  "category_slug": "TRANSPORTATION",
  "check_number": null,
  "currency": "CAD",
  "date": "2024-02-24",
  "description": null,
  "internal_id": "123_NxkDjlyk45cQoDm5PEqJuKJaw6qrj9cy89zBA",
  "iso_currency_code": "CAD",
  "location_address": null,
  "location_city": null,
  "location_country": null,
  "location_lat": null,
  "location_lon": null,
  "location_postal_code": null,
  "location_region": null,
  "location_store_number": null,
  "manual": false,
  "merchant_entity_id": "eyg8o776k0QmNgVpAmaQj4WgzW9Qzo6O51gdd",
  "merchant_name": "Uber",
  "method": "other",
  "name": "Uber 063015 SF**POOL**",
  "payment_channel": "online",
  "payment_meta_by_order_of": null,
  "payment_meta_payee": null,
  "payment_meta_payer": null,
  "payment_meta_payment_method": null,
  "payment_meta_payment_processor": null,
  "payment_meta_ppd_id": null,
  "payment_meta_reason": null,
  "payment_meta_reference_number": null,
  "pending": true,
  "pending_transaction_id": null,
  "personal_finance_category_confidence_level": "VERY_HIGH",
  "personal_finance_category_detailed": "TRANSPORTATION_TAXIS_AND_RIDE_SHARES",
  "personal_finance_category_icon_url": "https://plaid-category-icons.plaid.com/PFC_TRANSPORTATION.png",
  "personal_finance_category_primary": "TRANSPORTATION",
  "status": "pending",
  "team_id": "123",
  "transaction_code": null,
  "transaction_id": "NxkDjlyk45cQoDm5PEqJuKJaw6qrj9cy89zBA",
  "transaction_type": "special",
  "unofficial_currency_code": null,
  "website": "uber.com",
}
`;

exports[`Transform income transaction 1`] = `
{
  "account_id": "AG7EkLW7DRSVaN8Z75jMT1DJN51QpWc9LKB7w",
  "account_owner": null,
  "amount": 500,
  "authorized_date": 2024-02-22T00:00:00.000Z,
  "balance": "-500.00",
  "bank_account_id": "123",
  "category": "income",
  "category_id": "22001000",
  "category_slug": "TRAVEL",
  "check_number": null,
  "currency": "CAD",
  "date": "2024-02-22",
  "description": null,
  "internal_id": "123_5QKmMdaKWgtzkvKEPmqriLZR1mV3kMF5X9EeX",
  "iso_currency_code": "CAD",
  "location_address": null,
  "location_city": null,
  "location_country": null,
  "location_lat": null,
  "location_lon": null,
  "location_postal_code": null,
  "location_region": null,
  "location_store_number": null,
  "manual": false,
  "merchant_entity_id": "NKDjqyAdQQzpyeD8qpLnX0D6yvLe2KYKYYzQ4",
  "merchant_name": "United Airlines",
  "method": "other",
  "name": "United Airlines",
  "payment_channel": "in store",
  "payment_meta_by_order_of": null,
  "payment_meta_payee": null,
  "payment_meta_payer": null,
  "payment_meta_payment_method": null,
  "payment_meta_payment_processor": null,
  "payment_meta_ppd_id": null,
  "payment_meta_reason": null,
  "payment_meta_reference_number": null,
  "pending": false,
  "pending_transaction_id": null,
  "personal_finance_category_confidence_level": "VERY_HIGH",
  "personal_finance_category_detailed": "TRAVEL_FLIGHTS",
  "personal_finance_category_icon_url": "https://plaid-category-icons.plaid.com/PFC_TRAVEL.png",
  "personal_finance_category_primary": "TRAVEL",
  "status": "posted",
  "team_id": "123",
  "transaction_code": null,
  "transaction_id": "5QKmMdaKWgtzkvKEPmqriLZR1mV3kMF5X9EeX",
  "transaction_type": "special",
  "unofficial_currency_code": null,
  "website": "united.com",
}
`;

exports[`Transform type transfer 1`] = `
{
  "account_id": "AG7EkLW7DRSVaN8Z75jMT1DJN51QpWc9LKB7w",
  "account_owner": null,
  "amount": -5.4,
  "authorized_date": 2024-02-23T00:00:00.000Z,
  "balance": "5.40",
  "bank_account_id": "123",
  "category": "transfer",
  "category_id": "22016000",
  "category_slug": "TRANSPORTATION",
  "check_number": null,
  "currency": "CAD",
  "date": "2024-02-24",
  "description": null,
  "internal_id": "123_NxkDjlyk45cQoDm5PEqJuKJaw6qrj9cy89zBA",
  "iso_currency_code": "CAD",
  "location_address": null,
  "location_city": null,
  "location_country": null,
  "location_lat": null,
  "location_lon": null,
  "location_postal_code": null,
  "location_region": null,
  "location_store_number": null,
  "manual": false,
  "merchant_entity_id": "eyg8o776k0QmNgVpAmaQj4WgzW9Qzo6O51gdd",
  "merchant_name": "Uber",
  "method": "transfer",
  "name": "Uber 063015 SF**POOL**",
  "payment_channel": "online",
  "payment_meta_by_order_of": null,
  "payment_meta_payee": null,
  "payment_meta_payer": null,
  "payment_meta_payment_method": null,
  "payment_meta_payment_processor": null,
  "payment_meta_ppd_id": null,
  "payment_meta_reason": null,
  "payment_meta_reference_number": null,
  "pending": true,
  "pending_transaction_id": null,
  "personal_finance_category_confidence_level": "VERY_HIGH",
  "personal_finance_category_detailed": "TRANSPORTATION_TAXIS_AND_RIDE_SHARES",
  "personal_finance_category_icon_url": "https://plaid-category-icons.plaid.com/PFC_TRANSPORTATION.png",
  "personal_finance_category_primary": "TRANSPORTATION",
  "status": "pending",
  "team_id": "123",
  "transaction_code": "transfer",
  "transaction_id": "NxkDjlyk45cQoDm5PEqJuKJaw6qrj9cy89zBA",
  "transaction_type": "special",
  "unofficial_currency_code": null,
  "website": "uber.com",
}
`;

exports[`Transform accounts 1`] = `
{
  "currency": "CAD",
  "id": "kKZWQnoZVqcBeN71qdyoh8mVoErgb7tL7gmBL",
  "institution": {
    "id": "ins_100546",
    "logo": null,
    "name": "American Funds Retirement Solutions",
  },
  "name": "Plaid Mortgage",
  "provider": "plaid",
}
`;

exports[`Transform account balance 1`] = `
{
  "amount": 2000,
  "currency": "USD",
}
`;
